# cazan-common

./: Cargo.toml  build.rs
.github/workflows/: publish.yml  pull-request.yml
src/: geometry.rs  image.rs  lib.rs  rdp.rs  triangulation.rs
src/geometry/: mod.rs  point.rs  polygon.rs  triangle.rs
